--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,31 @@
 # Dependencies
 node_modules/
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
 
 # Production
 /dist
 /build
 
-# Environment variables - NEVER COMMIT THESE
+# Environment variables - NEVER COMMIT
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env.example
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-# Editor directories and files
+# Editor
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-# OS files
+# OS
 Thumbs.db
 
-# Optional npm cache directory
+# Optional
 .npm
-
-# Optional eslint cache
 .eslintcache
-
-# Temporary files
-*.tmp
-*.temp
-
-# Database files
-*.db
-*.sqlite
-
-# Documentation (keeping only essential)
-FINAL_SUMMARY.txt
-UPDATES.md
-WHAT_TO_CHANGE.md
-DATABASE_INFO.md
