--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "lucide-react": "^0.294.0",
     "mongoose": "^8.19.2",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
